--- a/blacool/blacool.css
+++ b/blacool/blacool.css
@@ -8,8 +8,6 @@
 
 /* 全てのタグ */
 * {
-	margin: 0;
-	padding: 0;
 	color: #000000;
 	background-color: #FFFFFF;
 	font-family: sans-serif;
@@ -17,6 +15,8 @@
 
 /* ページ全体 */
 body {
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 }
@@ -43,6 +43,8 @@ header {
 
 /* ヘッダー - 色とフォント */
 header, header * {
+	margin: 0;
+	padding: 4px;
 	background-color: #404040;
 	color: #C08000;
 	font-size: 110%;
@@ -102,17 +104,13 @@ nav {
 
 /* 記事 */
 article {
+	margin-top: 0;
+	padding-top: 0;
 	display: block;
 	overflow: auto;
 	border-top-style: dotted;
 	border-top-width: 1px;
 	border-top-color: #CACACA;
-}
-
-/* 記事の下に改行を自動挿入 */
-article::after {
-	content: "\A";
-	white-space: pre;
 }
 
 /* サイドバー内の記事 */
