--- a/blacool/blacool.css
+++ b/blacool/blacool.css
@@ -1,9 +1,11 @@
 /**
  * Blacool Style
- * Copyright (C) Takym.
+ * Copyright (C) 2019 Takym.
+ *
+ * Blacoolはosdev.jp向けに作成しました。
  *
  * @author Takym
- * @version 0.0.0.1
+ * @version 0.0.0.2
  */
 
 /* 全てのタグ */
