コミュニティ名や著作権表記等、細かな変更

--- a/blacool/blacool.css
+++ b/blacool/blacool.css
@@ -2,10 +2,10 @@
  * Blacool Style
  * Copyright (C) 2019 Takym.
  *
- * Blacoolはosdev.jp向けに作成しました。
+ * Blacoolはosdev-jp向けに作成しました。
  *
  * @author Takym
- * @version 0.0.0.2
+ * @version 0.0.0.3
  */
 
 /* 全てのタグ */
